public/game/tadaMain.css
@font-face {
  font-family: 'Open Sans Light';
  font-style: normal;
  font-weight: 300;
  src:url(https://fonts.gstatic.com/s/opensans/v13/DXI1ORHCpsQm3Vp6mXoaTRa1RVmPjeKy21_GQJaLlJI.woff) format('woff');
}

body {
  height: 100%;
  padding: 0;
  overflow: auto;
  margin: 0;
  -webkit-overflow-scrolling: touch;
}

html {
  height: 100%;
  width: 100%;
  overflow: hidden;
}

#gamestartmodal {
  opacity: 1;
  background: #0000008c;
}

#tada_app_widget {
  width: 100%;
  height: 100%;
  display: flex;
}

#spinny_box {
  display: flex;
  top: 50%;
  position: fixed;
  z-index: 1000;
  justify-content: left;
  align-items: center;
  opacity: 0;
}

#spinny_box svg {
  padding: 8px;
}

#present_time_reminder_container {
  position: fixed;
  z-index: 1000;
  opacity: 0;
  width: 300px;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  right: -40px;
  top: 46.5%;
}
#present_time_reminder_container .present-time-reminder {
  align-items: center;
  transition: 0.4s all ease;
  padding: 10px 50px 10px 10px;
  background-color: white;
  display: flex;
  border-radius: 5px;
  cursor: pointer;
  width: 77%;
}
#present_time_reminder_container .tada-remaind-bar-close {
  right: 0;
  background-color: #846b8a;
  top: -10px;
  left: 62px;
  position: absolute;
  width: 22px;
  height: 22px;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
}
#present_time_reminder_container #present_time_reminder_1:hover {
  transition: 0.4s all ease;
  box-shadow: 10px 10px 19px 0 rgba(133, 131, 133, 1);
  /*margin-right: 20px;*/
}
#present_time_reminder_container .present-time-reminder:first-child {
  margin-bottom: 20px;
}
#present_time_reminder_container .present-time-reminder span {
  font-family: Montserrat;
  font-size: 20px;
  line-height: 150%;
  display: flex;
  justify-content: space-between;
}
#present_time_reminder_container .present-time-reminder .tada-expire-time {
  margin-left: 5px;
}

#canvas {
  z-index: 8;
}

#canvas1 {
  z-index: 10;
}

.breathing-animation {
  -webkit-animation: breathing 7s ease-out infinite normal;
  animation: breathing 7s ease-out infinite normal;
}

.tada-wheel-wrapper .tada-floating-dialog {
  display: none;
  flex-direction: column;
  top: 50%;
  position: fixed;
  z-index: 1001;
  justify-content: center;
  background-color: white;
  border-radius: 15px;
  padding: 20px 40px;
  -webkit-box-shadow: 10px 10px 19px 0px rgba(133, 131, 133, 1);
  -moz-box-shadow: 10px 10px 19px 0px rgba(133, 131, 133, 1);
  box-shadow: 10px 10px 19px 0px rgba(133, 131, 133, 1);
}

.tada-wheel-wrapper .tada-floating-dialog p {
  font-size: 16px;
  margin:0;
  font-family: "Open Sans";
}

.tada-wheel-wrapper .tada-floating-dialog button {
  border-radius: 20px;
  border: none;
  outline: none !important;
  color: white;
  width: 90%;
  font-weight: bold;
  font-size: 16px;
  background-color: #29abe2;
  font-family: "Open Sans";
  padding: 7px;
  transition: 0.4s all ease;
  /* animation-name: none !important;
     */
}

.tada-wheel-wrapper .tada-floating-dialog-button-div {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: 0.4s all ease;
  margin-top: 25px;
}

.tada-floating-dialog button:hover {
  transition: 0.4s all ease;
  width: 110%;
  filter: brightness(1.2);
}

.tada-floating-dialog button:active {
  transition: 0.4s all ease;
  width: 90%;
}


/* .tada-floating-dialog button:active {
     background-color: #29abe2;
}
 */

#tada_floating-dialog_cashview {
  font-size: 16px;
  font-weight: bold;
  font-family: "Open Sans";
  color: #f7931e;
}

#tada-floating-dialog-countdownTime {
  font-weight: bold;
}

.tada_start_icon_div {
  width: fit-content;
  display: flex;
  border-radius: 8px;
  flex-direction: column;
  background-size: cover;
  width: 50px;
  height: 50px;
  justify-content: center;
  align-items: flex-start;
  position: absolute;
  cursor: pointer;
  background-repeat: no-repeat;
}

.tada-remained_notify_button_container {
  min-width: 260px;
  justify-content: center;
  display: flex;
  align-items: center;
}

.tada-wheel-wrapper .modal-header {
  padding: 6px 0 !important;
  margin: 0 15px;
  min-height: 60px;
}

.tada-wheel-wrapper .tada_game_modal {
  padding: 15px;
}

.tada-wheel-wrapper .tada_game_start_title {
  object-fit: contain;
  height: 45px;
  position: absolute;
  left: calc(50% - 25px);
}

#tada-flower-falling {
  width: 100%;
  position: fixed;
  top: 0;
  height: 100vh;
  z-index: 9999;
  color: white;
  overflow: hidden;
  pointer-events: none;
  display: none;
}

.tada-wheel-wrapper .dot {
  width: 50px;
  height: 50px;
  position: absolute;
  background-size: 100% 100%;
  background-repeat: no-repeat !important;
}

#tada_spin_start_button {
  background-color: #29abe2;
  outline: none;
  border-radius: 30px;
  border: none;
  color: white;
  width: 90%;
  padding: 10px;
  font-family: "Open Sans";
  font-size: 15px;
  font-weight: bold;
  margin-top: 15px;
  transition: 0.4s all ease;
}

#tada_spin_start_button:hover {
  filter: brightness(1.2);
  transition: 0.4s all ease;
  width: 100%;
}

#tada_spin_start_button:active {
  filter: brightness(1.2);
  transition: 0.4s all ease;
  width: 90%;
}

.tada-wheel-wrapper .tada_apply_my_account_parent {
  display: flex;
  align-items: center;
  justify-content: center;
}

#tada_apply_my_discount {
  background-color: #29abe2;
  outline: none;
  border-radius: 30px;
  border: none;
  color: white;
  width: 90%;
  padding: 10px;
  font-family: "Open Sans";
  font-size: 14px;
  font-weight: bold;
  margin-top: 15px;
  opacity: 1;
  text-shadow: unset !important;
  transition: 0.4s all ease;
}

#tada_apply_my_discount:hover {
  transition: 0.4s all ease;
  width: 110%;
  filter: brightness(1.2);
}

#tada_apply_my_discount:active {
  transition: 0.4s all ease;
  width: 80%;
}
/* ... */

